Add in debugging capability on ports 4512 and 4513